--- a/kubernetes-project-deployment.yml
+++ b/kubernetes-project-deployment.yml
@@ -6,7 +6,7 @@
  
   tasks: 
   - name: create a deployment
-    command: kubectl apply -f capstone-deploy.yml
+    command: kubectl apply -f project-deploy.yml
  
   - name: update deployment with new pods if image updated in docker hub
     command: kubectl rollout restart deployment.v1.apps/capstone-deployment
